Adjusting Desktop Styles

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -28,7 +28,8 @@
 
   <main class='body-wrapper'>
     <div class="background-wrapper">
-      <img src="./assets/img/bg--mobile.png" alt="Geometrical background in coral and red for Camille de Wulf's webpage">
+      <img src="./assets/img/bg--mobile.png" alt="Geometrical background in coral and red for Camille de Wulf's webpage" class='bg--small'>
+      <img src="./assets/img/bg--desktop.png" alt="Geometrical background in coral and red for Camille de Wulf's webpage" class='bg--big'>
     </div>
     <div class="content-wrapper">
       <div class="card-wrapper">
